--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="/projects">Projects</a></li>
         <div class="cancel-btn">
           <i class="fas fa-times"></i>
         </div>
