--- a/projects/index.html
+++ b/projects/index.html
@@ -49,7 +49,7 @@
         <div class="text-four" align="center">Woozy's YT</div>
       </div>
   </section>
-  <section class="about" id="about">
+  <section class="adobly" id="about">
     <div class="content">
       <div class="title"><span>Adobly</span></div>
       <div class="about-details">
