--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1141879797782413382/1152718105211048099/WoozyCat.png">
   <title>WoozyStudio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -179,7 +179,7 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
