Edit Adobly's discord link

--- a/projects/index.html
+++ b/projects/index.html
@@ -62,7 +62,7 @@
           <p>
             Adobly is an organization that will support you in your programming journey. On our YouTube channel you will find programming tutorials that will help you, and also on our music channel, where you will find the lyrics of your favorite songs! Adobly was a project that had quite a few prototypes behind it, it was shaped into what it is, here is the Discord server:
             <url>
-              <a href="https://discord.gg/BskQZmkhnb">https://discord.gg/BskQZmkhnb</a>
+              <a href="https://adobly.github.io/discord">https://adobly.github.io/discord</a>
             </url>
           </div>
       </div>
