--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
       </ul>
       <div class="media-icons">
         <a href="https://github.com/WoozyStudio"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/WoozyStudios"><i class="fab fa-twitter"></i></a>
+        <a href="https://twitter.com/WoozyStudios"><i class="fab fa-x-twitter"></i></a>
         <a href="https://www.instagram.com/woozysstudio/"><i class="fab fa-instagram"></i></a>
         <a href="https://www.youtube.com/@WoozyStudio"><i class="fab fa-youtube"></i></a>
         <a href="https://discord.com/users/869583777884667964"><i class="fab fa-discord"></i></a>
